--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,14 @@
-<div class="container">
-  <div class="row">
-    <app-user
-      *ngFor="let u of users"
-      [user]="u"
-      ></app-user>
+<nav>
+  <div class="nav-wrapper">
+    <a href="#" class="brand-logo">Приложение!</a>
+    <ul id="nav-mobile" class="right hide-on-med-and-down">
+      <li><a routerLink="/">Главная</a></li>
+      <li><a routerLink="/setup">Настройки</a></li>
+    </ul>
   </div>
+</nav>
+<div class="container">
+  <router-outlet></router-outlet>
 </div>
 
 
